--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       horizaontally based on vw to prevent content jump when vertical scroll bar show/hide.*/
       body { overflow-x: hidden; }
 
-      /* animated background find a diff place for this */
+      /* animated background 
+         TODO - find a diff place for this 
+         TODO - animate w/out css - CPU perf horrible sometimes
+      */
       html { background-color:rgba(33, 33, 33, 0.9); }
       #root { background-color: none; min-height: 100%; }
 
